--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Potta+One&display=swap');
-
-
 * {
   margin: 0;
   padding: 0;
@@ -13,16 +10,14 @@ body {
   overflow-x: hidden;
   position: relative;
 }
-
 main {
   position: absolute;
 }
 
 #logo {
   color: white;
-  font-family: 'Potta One', cursive;
+  font-family: "Abril Fatface";
 }
-
 .nav-header {
   min-height: 10vh;
   font-size: 1rem;
@@ -36,7 +31,6 @@ main {
   z-index: 2;
   position: relative;
 }
-
 .line1,
 .line2 {
   width: 3rem;
@@ -67,7 +61,6 @@ main {
   padding-left: 5rem;
   position: relative;
 }
-
 .hero-img {
   position: relative;
   flex: 1;
@@ -84,7 +77,6 @@ main {
 .fashion-span {
   color: rgb(255, 139, 93);
 }
-
 .mountain-span {
   color: rgb(86, 124, 228);
 }
@@ -92,18 +84,15 @@ main {
 .hike-span {
   color: rgb(167, 110, 231);
 }
-
 .hero-desc h2 {
-  font-family: 'Potta One',cursive;
+  font-family: "Abril Fatface";
   font-size: 5rem;
 }
-
 .hero-desc p {
   padding: 3rem 0rem;
   font-size: 1.5rem;
   color: rgb(223, 223, 223);
 }
-
 .explore {
   padding: 1rem 2rem;
   background: none;
@@ -115,7 +104,6 @@ main {
   align-self: flex-start;
   cursor: pointer;
 }
-
 .nav-bar {
   position: fixed;
   top: 0;
@@ -131,29 +119,23 @@ main {
   clip-path: circle(50px at 100% -10%);
   -webkit-clip-path: circle(50px at 100% -10%);
 }
-
 .burger {
   cursor: pointer;
 }
-
 .nav-links {
   font-size: 3rem;
   flex-basis: 30rem;
 }
-
 .nav-links h3 {
   padding: 3rem 0rem;
 }
-
 .contact {
   flex-basis: 30rem;
 }
-
 .contact h2 {
   font-size: 3rem;
   padding: 2rem 0rem;
 }
-
 .contact p {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -181,17 +163,14 @@ main {
   transition-property: background, transform;
   transform-origin: 75% 75%;
 }
-
 .cursor.nav-active {
   background: rgb(86, 124, 228);
   transform: scale(3);
 }
-
 .cursor.explore-active {
   background: white;
   transform: scale(3);
 }
-
 .cursor-text {
   position: absolute;
   top: 50%;
@@ -199,12 +178,10 @@ main {
   font-size: 0.5rem;
   transform: translate(-50%, -50%);
 }
-
 .title {
   position: relative;
   overflow: hidden;
 }
-
 .title-swipe {
   width: 100%;
   height: 100%;
@@ -214,15 +191,12 @@ main {
   mix-blend-mode: darken;
   transform: translateY(100%);
 }
-
 .t-swipe1 {
   background: rgb(86, 124, 228);
 }
-
 .t-swipe2 {
   background: rgb(167, 110, 231);
 }
-
 .t-swipe3 {
   background: rgb(255, 139, 93);
 }
@@ -230,7 +204,6 @@ main {
 .scrollmagic-pin-spacer {
   position: static !important;
 }
-
 body.hide {
   overflow: hidden;
 }
@@ -250,18 +223,15 @@ body.hide {
   flex-wrap: wrap;
   position: relative;
 }
-
 .fashion-img {
   height: 70vh;
   flex-basis: 30rem;
 }
-
 .fashion-text {
   flex: 1;
   position: relative;
   flex-basis: 25rem;
 }
-
 .fashion-img img {
   width: 100%;
   height: 100%;
@@ -276,11 +246,9 @@ body.hide {
 .fashion1 h1 {
   color: rgb(255, 139, 93);
 }
-
 .fashion2 h1 {
   color: rgb(167, 110, 231);
 }
-
 .fashion3 h1 {
   color: rgb(86, 124, 228);
 }
@@ -290,7 +258,6 @@ body.hide {
   padding: 2rem 2rem 0rem 0rem;
   margin-bottom: 10rem;
 }
-
 .fashion-nr {
   font-size: 15rem;
   position: absolute;
@@ -308,17 +275,14 @@ body.hide {
   left: 0;
   transform: translateX(-100%);
 }
-
 .swipe1 {
   background: rgb(167, 110, 231);
   z-index: 5;
 }
-
 .swipe2 {
   background: rgb(86, 124, 228);
   z-index: 4;
 }
-
 .swipe3 {
   background: rgb(255, 139, 93);
   z-index: 3;
@@ -328,16 +292,13 @@ body.hide {
   .hero-img {
     height: 50vh;
   }
-
   .fashion-text h1 {
     font-size: 2rem;
     padding: 1rem 0rem;
   }
-
   .fashion-text p {
     font-size: 1.2rem;
   }
-
   .fashion-img img {
     height: 50vh;
     object-position: top;
@@ -349,70 +310,56 @@ body.hide {
     width: 100%;
     margin: 0;
   }
-
   .slide {
     display: block;
     width: 100%;
     text-align: center;
   }
-
   .hero-desc {
     padding: 0;
   }
-
   .hero-img {
     padding-top: 4rem;
   }
-
   .hero-desc h2 {
     font-size: 1.6rem;
     padding: 1rem 0rem;
   }
-
   .hero-desc p {
     padding: 2rem 1rem;
     font-size: 1rem;
     line-height: 1.5rem;
     text-align: center;
   }
-
   .explore {
     width: 60%;
     margin: auto;
   }
-
   .detail-slide {
     width: 100%;
     text-align: center;
   }
-
   .fashion-text p {
     margin-bottom: 5rem;
     padding: 0;
   }
-
   .fastion-text h1 {
     margin: 2rem 0rem;
   }
-
   .fashion-nr {
     font-size: 8rem;
   }
-
   .nav-bar {
     display: block;
   }
-
   .nav-links {
     font-size: 2rem;
     text-align: center;
   }
-
   .contact h2 {
     font-size: 3rem;
     text-align: center;
   }
-
   .contact p {
     font-size: 1.2rem;
     padding: 2rem;
